@@ -201,8 +201,8 @@ abr bit rate modes are specified.
 .TP
 .I quality
 The quality of encoding a value between 0.0 .. 1.0 (e.g. 0.8), with 1.0 being
-the highest quality. Use a value greater than 0.0. Only used when cbr or vbr
-bit rate modes are specified.
+the highest quality. Use a value greater than 0.0. Only used when vbr
+bit rate mode is specified.
 .TP
 .I server
 The
